--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "firebase": "^11.0.0",
     "firebase-admin": "^13.6.1",
     "next": "^15.0.0",
